2013-05-06  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/wordsize-64/glob64.c: Moved to ...
	* sysdeps/wordsize-64/glob64.c: ... here.

	* sysdeps/generic/not-cancel.h (NO_CANCELLATION): New macro.
	(pause_not_cancel, nanosleep_not_cancel, sigsuspend_not_cancel):
	New macros.

	* debug/getlogin_r_chk.c: Moved to ...
	* login/getlogin_r_chk.c: ... here.
	* debug/Makefile (routines): Move getlogin_r_chk to ...
	* login/Makefile (routines): ... here.
	* debug/Versions (libc: GLIBC_2.4): Move getlogin_r_chk to ...
	* login/Versions (libc: GLIBC_2.4): ... here.

	* io/poll.c (__poll): Renamed from poll.
	Add libc_hidden_def.
	(poll): Define as weak alias.

	* debug/ptsname_r_chk.c: Moved to ...
	* login/ptsname_r_chk.c: ... here.
	* debug/Makefile (routines): Move ptsname_r_chk to ...
	* login/Makefile (routines): ... here.
	* debug/Versions (libc: GLIBC_2.4): Move __ptsname_r_chk to ...
	* login/Versions (libc: GLIBC_2.4): ... here.

	* posix/getlogin.c: Moved to ...
	* login/getlogin.c: ... here.
	* posix/getlogin_r.c: Moved to ...
	* login/getlogin_r.c: ... here.
	* posix/getlogin_r.c: Moved to ...
	* login/getlogin_r.c: ... here.
	* posix/Makefile (routines): Move getlogin, getlogin_r, setlogin to ...
	* login/Makefile (routines): ... here.
	* posix/Versions (libc: GLIBC_2.0): Move setlogin to ...
	* login/Versions (libc: GLIBC_2.0): ... here.

	* resource/setrlimit.c (__setrlimit): Renamed from setrlimit.
	(setrlimit): Define as weak alias.

	* sysdeps/posix/truncate.c (__truncate): Renamed from truncate.
	Call __ names for open, ftruncate, and close.
	For LENGTH==0 case, just use O_TRUNC rather than calling ftruncate.
	(truncate): Define as weak alias.

2013-05-06  Joseph Myers  <joseph@codesourcery.com>

	* math/gen-libm-test.pl (parse_args): Initialize x before each
	test of frexp, modf and remquo.

	* math/libm-test.inc (gamma_test): Consistently use TEST_f_f1 to
	test signgam value.
